Opened 14 years ago
Closed 14 years ago
#7100 closed bug (fixed)
[ext4] Cannot rename volume label
Reported by: | diver | Owned by: | korli |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | File Systems/ext2 | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
This is hrev40223, gcc4hybrid.
Renaming volume label in Tracker doesn't work. I can enter edit mode and change text but after I hit enter name reverts to original one.
Note:
See TracTickets
for help on using tickets.
Implemented in hrev40243.